<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"> 
    
    <LinearLayout 
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:orientation="vertical"
		  android:gravity="center"		 
		  android:paddingBottom="@dimen/activity_vertical_margin"
		  android:paddingLeft="@dimen/activity_horizontal_margin"
		  android:paddingRight="@dimen/activity_horizontal_margin"
		  android:paddingTop="@dimen/activity_vertical_margin" >
 
    
    <ImageView        
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:src="@drawable/pprofile"
         android:padding="10dp"	                 
         android:contentDescription="@string/load" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"	        	       
        android:text="@string/editName"	       
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:drawableLeft="@drawable/name"
        android:padding="5dp"	        
        android:gravity="bottom"
        android:layout_marginRight="5dp"
        android:textColor="#585858"
        android:textSize="20sp" />

    <EditText
          android:id="@+id/editName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	            
          android:inputType="textPersonName"
          android:hint="@string/hintName"	 	                    
          android:textColor="@android:color/black" >
          <requestFocus />
      </EditText>
     
      <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/editDateOfBirth"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/birthdate"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editdateOfBirth"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	
          android:hint="@string/hintDate"                                 
          android:textColor="@android:color/black" />
      
      <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/editBloodGroup"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/blood"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" /> 
      
      <Spinner
		    android:id="@+id/editSpinner"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"	   
		    android:textSize="20sp" 
		    android:prompt="@string/spinner"
		    android:entries="@array/entries" />
      
      <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/editGendre"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawableLeft="@drawable/gender"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" /> 
	       
      <RadioGroup
           android:id="@+id/editRadioGender"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="start"           
           android:orientation="horizontal" >
    
           <RadioButton
               android:id="@+id/editGenderMale"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/genderMale"
               android:textSize="20sp"
               android:layout_marginRight="40dp"
               android:checked="true" />
    
           <RadioButton
               android:id="@+id/editGenderFemale"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"                    
               android:text="@string/genderFemale"
               android:textSize="20sp" />
    
      </RadioGroup>

      
      <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/editHeight"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/height"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editHeight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	            
          android:inputType="numberDecimal"	 
          android:hint="@string/hintHeight"  	                    
          android:textColor="@android:color/black" />
      
      <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/editWeight"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawableLeft="@drawable/weight"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editWeight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	            
          android:inputType="number"
          android:hint="@string/hintWeight"	 	                    
          android:textColor="@android:color/black" />
      
      <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/editNote"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:drawableLeft="@drawable/note"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editNote"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	            
          android:inputType="textMultiLine"	 	
          android:hint="@string/hintNote"                    
          android:textColor="@android:color/black" />
      
      <Button
	        android:id="@+id/btnSave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"        
	        android:background="@drawable/rounded_blue"  
	        android:drawableLeft="@drawable/save"      
	        android:layout_gravity="center"
	        android:drawablePadding="5dp"
	        android:textStyle="bold"
	        android:layout_marginTop="60dp"
		    android:paddingTop="20dp"
		    android:paddingBottom="20dp"
		    android:paddingLeft="40dp"
		    android:paddingRight="40dp"	   
	        android:textColor="@android:color/primary_text_dark" 
	        android:text="@string/btnSave" />
          
	    
    </LinearLayout>
  
</ScrollView>
