<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"> 
    
    <LinearLayout 
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:orientation="vertical"
		  android:gravity="center"		 
		  android:paddingBottom="@dimen/activity_vertical_margin"
		  android:paddingLeft="@dimen/activity_horizontal_margin"
		  android:paddingRight="@dimen/activity_horizontal_margin"
		  android:paddingTop="@dimen/activity_vertical_margin" >
		  
        <ImageView        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/load"
	        android:layout_marginBottom="10dp"
	        android:layout_gravity="center"
	        android:src="@drawable/pdocpro"/>	 
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"	        	       
        android:text="@string/doctorname"	       
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:drawableLeft="@drawable/docname"
        android:padding="5dp"	        
        android:gravity="bottom"
        android:layout_marginRight="5dp"
        android:textColor="#585858"
        android:textSize="20sp" />

    <EditText
          android:id="@+id/editDoctorName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	            
          android:inputType="textPersonName"
          android:hint="@string/hintName"	 	                    
          android:textColor="@android:color/black" >
          <requestFocus />
      </EditText>
     
      <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/specialization"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/specialization"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editSpecialization"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:inputType="text"
          android:background="@drawable/rounded_white"	
          android:hint="@string/hintNote"                                 
          android:textColor="@android:color/black" />
      
       <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/docaddress"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/places"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editDocAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:inputType="textEmailAddress"
          android:background="@drawable/rounded_white"	
          android:hint="@string/hinedocaddress"                                 
          android:textColor="@android:color/black" />
      
       <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/editDocContact"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/contact"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editDocContact"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:inputType="phone"
          android:background="@drawable/rounded_white"	
          android:hint="@string/doccontact"                                 
          android:textColor="@android:color/black" />
      
       <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/email"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/mail"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editDocEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:inputType="textWebEmailAddress"
          android:background="@drawable/rounded_white"	
          android:hint="@string/hintName"                                 
          android:textColor="@android:color/black" />  
          

        
      <Button
        android:id="@+id/btnSaveDocProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:background="@drawable/rounded_blue"  
        android:drawableLeft="@drawable/save"      
        android:layout_gravity="center"
        android:drawablePadding="5dp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
	    android:paddingTop="20dp"
	    android:paddingBottom="20dp"
	    android:paddingLeft="40dp"
	    android:paddingRight="40dp"	   
        android:textColor="@android:color/primary_text_dark" 
        android:text="@string/btnSave" />
          
	    
    </LinearLayout>
  
</ScrollView>
