<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"> 
    
	<LinearLayout 
	
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:gravity="center"
	    android:orientation="vertical" >
    
	    <ImageView	         
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_margin="10dp"
	         android:src="@drawable/viewdiet"
	         android:padding="10dp"	                 
	         android:contentDescription="@string/load" />
	    
	        	<TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/dateOfDiet"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/date"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />

	    <EditText
          android:id="@+id/editDateOfDiet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	
          android:hint="@string/hintDate"                                         
          android:textColor="@android:color/black" />
	    
	    <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/timeOfDiet"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:drawableLeft="@drawable/time"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />	  
	       
	    <EditText
          android:id="@+id/editTimeOfDiet"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	
          android:hint="@string/hintTime"                                         
          android:textColor="@android:color/black" />	  
	         
	   <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/myfeastName"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:drawableLeft="@drawable/feastname"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editFeastname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	            
          android:inputType="textMultiLine"	 	
          android:hint="@string/hintNote"                    
          android:textColor="@android:color/black" />
      
      <TextView
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"	        	       
	       android:text="@string/myfeastManu"	       
	       android:textColor="#585858"
	       android:padding="5dp"
	       android:drawablePadding="3dp"
	       android:drawableLeft="@drawable/feastmenu"
	       android:layout_gravity="left"
	       android:gravity="bottom"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="5dp"
	       android:textSize="20sp" />            

      <EditText
          android:id="@+id/editFeastmenu"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"	           
          android:ems="10"
          android:padding="10dp"
          android:layout_gravity="center"
          android:background="@drawable/rounded_white"	            
          android:inputType="textMultiLine"	 	
          android:hint="@string/hintNote"                    
          android:textColor="@android:color/black" />      	
    	
  
        
        <CheckBox
	        android:id="@+id/editDietAlarm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	       
	        android:gravity="center"
	        android:layout_gravity="right"
	        android:textSize="20sp"
	        android:layout_marginTop="10dp"
	        android:layout_marginRight="5dp"
	        android:textColor="#585858"
	        android:text="@string/alarm" />  

    	<Button
	        android:id="@+id/btnSaveDiet"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"        
	        android:background="@drawable/rounded_blue"  
	        android:drawableLeft="@drawable/save"      
	        android:layout_gravity="center"
	        android:drawablePadding="5dp"
	        android:textStyle="bold"
	        android:layout_marginTop="60dp"
		    android:paddingTop="20dp"
		    android:paddingBottom="20dp"
		    android:paddingLeft="40dp"
		    android:paddingRight="40dp"	   
	        android:textColor="@android:color/primary_text_dark" 
	        android:text="@string/btnSave" />   

	</LinearLayout>

</ScrollView>
